--- a/src/App.css
+++ b/src/App.css
@@ -11,13 +11,15 @@
   left: 65%;
   transform: translate(-50%, -50%);
   background-image: url('./assets/CM_icon.png');
-  background-size: 30%; /* 이미지 크기 2/3로 조정 */
+  background-size: 30%;
+  /* 이미지 크기 2/3로 조정 */
   background-repeat: no-repeat;
   background-position: center;
   opacity: 0.1;
   width: 100%;
   height: 100%;
   z-index: -1;
-  pointer-events: none; /* 클릭 이벤트 방지 */
+  pointer-events: none;
+  /* 클릭 이벤트 방지 */
   filter: grayscale(100%);
 }
